--- a/front/src/components/footer.css
+++ b/front/src/components/footer.css
@@ -1,8 +1,7 @@
 .footer {
   margin-top: 150px;
-  background-color: var(--primary-color);
+  background-color: #54806F;
   padding: 25px 0;
-  background-color: #160a52;
 }
 .footer__container {
   display: flex;
